# c32

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  release-pr.yml  release.yml  rust.yml  version.yml
benches/: Cargo.toml  decode.rs  encode.rs
benches/targets/: decode.rs  decode_const.rs  encode.rs  encode_const.rs  samples.rs
c32/: Cargo.toml
c32/src/: lib.rs
fuzz/: Cargo.toml
fuzz/targets/: c32.rs  decode.rs  encode.rs
samples/: c32_m_100x128b.in  c32_m_100x1k.in  c32_m_100x256b.in  c32_m_100x2k.in  c32_m_100x32b.in  c32_m_100x4k.in  c32_m_100x512b.in  c32_m_100x64b.in  c32_s_128k.in  c32_s_1m.in  c32_s_256k.in  c32_s_2m.in  c32_s_32k.in  c32_s_512k.in  c32_s_64k.in
src/: lib.rs
tests/: Cargo.toml  error.rs  macro.rs  rand.rs  sample.rs  samples.rs  unit.rs
tests/tests/: test_const.rs  test_error.rs  test_rand.rs  test_sample.rs  test_unit.rs
