[package]
name = "c32"
version = "0.2.0"
authors = ["Max Karou <maxkarou@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.56"
repository = "https://github.com/52/c32"
documentation = "https://docs.rs/c32"
description = "Rust implementation of Crockford's Base32 encoding"
categories = ["encoding", "value-formatting", "parsing"]
keywords = ["base32", "crockford", "stacks-blockchain"]
exclude = [".github/", "benches/", "samples/"]

[dependencies]
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "deny"

[[bench]]
name = "encode"
path = "benches/encode.rs"
harness = false

[[bench]]
name = "decode"
path = "benches/decode.rs"
harness = false
