[package]
name = "c32"
version = "0.3.0"
authors = ["Max Karou <maxkarou@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.56"
repository = "https://github.com/52/c32"
documentation = "https://docs.rs/c32"
description = "Rust implementation of Crockford's Base32 encoding"
categories = ["encoding", "cryptography::cryptocurrencies", "no-std"]
keywords = ["base32", "crockford", "encoding", "stacks-blockchain"]
include = ["src/*", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.15"
rand = "0.9.0"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false
