[workspace]
resolver = "2"
members = ["c32", "benches", "fuzz", "tests"]

[workspace.package]
version = "0.5.3"
authors = ["Max Karou <maxkarou@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/52/c32"
documentation = "https://docs.rs/c32"

[workspace.dependencies]
# workspace
c32 = { version = "0.5.3", path = "c32" }

# crypto
sha2 = { package = "sha2-const-stable", version = "0.1.0" }

# misc
criterion = "0.5.1"
rand = "0.9.1"

[workspace.metadata.cargo-all-features]
skip_crates = ["fuzz"]
