[package]
name = "fuzz"
description = ""
keywords = []
categories = []
homepage = ""
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
c32 = { workspace = true, features = ["alloc", "check"] }
libfuzzer-sys = "0.4"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "c32"
path = "targets/c32.rs"
test = false
