[package]
name = "tests"
description = ""
keywords = []
categories = []
homepage = ""
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dev-dependencies]
c32 = { workspace = true, features = ["alloc", "check"] }
rand = { workspace = true }
